# learn_Pi-mono_toPython

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
demo/: chat.py
learn_asyncio/: example.py
markdown/: agent-code-guide.md  agent-loop-info-flow.md  agent-loop-learning-path.md  agent-types-learning-path.md  asyncio-guide.md  learning-roadmap.md  pi-ai-types-mapping.md  python-pi-implementation-plan.md
pi_agent/: __init__.py  agent.py  agent_loop.py  messages.py  simple_chat.py  types.py
pi_ai/: __init__.py  auth.py  event_stream.py  models.py  transform_messages.py  types.py  validation.py
pi_ai/providers/: __init__.py  deepseek.py  model_catalogs.py  openai_completions.py
test/: test_agent.py  test_agent_loop.py  test_agent_types.py  test_auth.py  test_event_stream.py  test_model.py  verify_deepseek.py  verify_two_round_tool_calls.py
