[project]
name = "pi-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "openai>=2.45.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "requests>=2.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pi_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
